--- a/20250614_appReactProps/src/components/wrap/main/scss/Section1Comonent.scss
+++ b/20250614_appReactProps/src/components/wrap/main/scss/Section1Comonent.scss
@@ -20,11 +20,13 @@
                         height:100%;
                         position: relative;
                         display: flex;
-                        margin-left: -100%;
+                        // margin-left: -100%;
+                        left: 0;
                         // left: -100% * 0;  /* 테스팅 */
                         // left: -100% * 1;  /* 테스팅 */
                         .slide {
                             width:100%;
+                            // width:20%;
                             height:100%;
                             a {
                                 position: relative;
